@@ -20,6 +20,8 @@ Version 1.7.0-svn:
  * WML Engine:
    * Added [show_objectives] tag (part of bug #13042)
    * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
+   * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
+     now (bug #13170)
 
 Version 1.6a:
  * User interface:
